changes in index.html

--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
                </div>
                 <div class="span3">
                     <div id='valori' >
-<div class="titolo">
-Mappa Hotspots Provincia WIFI</div>
+
 <div class="intestazione">
 <p style='font-family: arial ; font-size: 10pt; font-weight:bold;'>
 Clicca sulla mappa per aggiungere un Punto di Interesse o clicca su un PoI esistente.</div>
@@ -128,14 +127,14 @@ Clicca sulla mappa per aggiungere un Punto di Interesse o clicca su un PoI esist
 <button onclick="alert('Il resto alla prossima puntata ( invio dati json al backend )');">Invia</button>
 </p>
 </div>	</div>
-                    <p><a class="btn" href="#">View details &raquo;</a></p>
+                    <!--<p><a class="btn" href="#">View details &raquo;</a></p>-->
                 </div>
             </div>
 
             <hr>
 
             <footer>
-                <p>&copy; Company 2012</p>
+                <p>Cineca 2013</p>
             </footer>
 
         </div> <!-- /container -->
